# mp2-lab3-arithmetic

./: .gitignore  CMakeLists.txt
include/: TArithmeticExpression.h  TStateMachineCorrect.h  TStateMachineLexem.h  tqueue.h  tstack.h
sample/: CMakeLists.txt  main.cpp  samrab1.cpp  samrab2.cpp
src/: CMakeLists.txt  TArithmeticExpression.cpp  TStateMachineCorrect.cpp  TStateMachineLexem.cpp
test/: CMakeLists.txt  test_tarithmeticexpression.cpp  test_tqueue.cpp  test_tstack.cpp
